[package]
name = "pomo"
version = "0.1.0"
edition = "2021"
description = "Yet another Pomodoro timer CLI."
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
async-recursion = "1.0.4"
crossbeam-channel = "0.5.8"
ctrlc = "3.4.0"
dirs = "5.0.1"
exitcode = "1.1.2"
flume = "0.10.14"
inquire = "0.6.2"
tokio = { version = "1.29.1", features = ["full"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
